# rzip

./: Cargo.toml  README.md
src/: compress.rs  context_menu.rs  decompress.rs  main.rs  progress_bar.rs
