[package]
name = "rzip"
version = "0.1.0"
edition = "2024"

[dependencies]
mtzip = "4.0.3"
ripunzip = "2.0.3"
tokio = { version = "1.47.0", features = ["full"] }
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18.0"
winreg = "0.55"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
overflow-checks = false
